# fullstack_task_1

./: .gitignore  Docker-compose.yml  Dockerfile-backend  Dockerfile-frontend  README.md  docker-compose.yml  main.py  requirements.txt  test_db.db
apis/: base.py
apis/version1/: route_employee.py
backend/: init_db.py
backend/api/: models.py  routes.py
backend/backend/: pom.xml
backend/backend/src/main/java/com/heimkapital/backend/: BackendApplication.java
backend/backend/src/main/resources/: application.properties
backend/backend/src/test/java/com/heimkapital/backend/: BackendApplicationTests.java
backend/backend/src/test/resources/: data.sql
client/: Dockerfile  package-lock.json
client/src/: App.css  App.js
client/src/components/: AddEmployee.js  EmployeeDataTable.js
core/: config.py
data/postgres-init/: 01_init.sql
db/: base.py  session.py
db/models/: department.py  employee.py
db/repository/: employee.py
frontend/: add-employee.html  department.js  employee.js  index.html
frontend-ui/src/: App.js
schemas/: employee.py
server/: .env  .env.sample  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
server/app/: api.py  database.py  employee.py  models.py  schemas.py
server/config/: settings.py
server/tests/: conftest.py  test_crud.py
server/utils/: create_department.py
templates/components/: navbar.html
templates/employee/: create_employee.html
templates/general_pages/: homepage.html
tests/test_routes/: test_db.db  test_employee.py
webapps/: base.py
webapps/employee/: forms.py  route_employee.py
(+11 files in other folders)
