[tool.poetry]
name = "server"
version = "0.0.1"
description = ""
authors = [
    "Kriti Kumari"
]

[[tool.poetry.source]]
name = "default"
url = "https://pypi.org/simple"
default = true
secondary = false


[tool.poetry.dependencies]
python = "^3.9"
anyio = "^3.6.2"
attrs = "^22.2.0"
click = "^8.1.3"
exceptiongroup = "^1.1.0"
fastapi = "^0.88.0"
fastapi-utils = "^0.2.1"
greenlet = "^2.0.1"
h11 = "^0.14.0"
idna = "^3.4"
iniconfig = "^1.1.1"
packaging = "^22.0"
pluggy = "^1.0.0"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.4"
pytest = "^7.2.0"
python-dotenv = "^0.21.0"
sniffio = "^1.3.0"
sqlalchemy = "^1.4.46"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"
uvicorn = "^0.20.0"
